# sparebank1-to-ynab

./: .gitignore  Cargo.toml  Dockerfile  README.md  RELEASE_WORKFLOW.md
.github/workflows/: rust.yml
src/: account_config.rs  auth_data.rs  common.rs  config.rs  lib.rs  main.rs  setup.rs  sparebanken1.rs  ynab.rs
tests/: account_config_tests.rs  config_tests.rs  ynab_tests.rs
