[package]
name = "sparebank1-to-ynab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
chrono-tz = "0.8.5"
dotenvy = "0.15.7"
open = "5.0.1"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
termion = "3.0.0"

[[bin]]
name = "sparebank1-to-ynab-sync"
path = "src/main.rs"

[[bin]]
name = "sparebank1-to-ynab-setup"
path = "src/setup.rs"
