[package]
name = "sparebank1-to-ynab"
version = "0.4.0"
edition = "2024"

[dependencies]
chrono = "0.4.33"
chrono-tz = "0.8.5"
dotenvy = "0.15.7"
open = "5.3.2"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
termion = "3.0.0"
rand = "0.9.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "sparebank1-to-ynab-setup"
path = "src/bin/setup.rs"

[[bin]]
name = "sparebank1-to-ynab-sync"
path = "src/bin/sync.rs"
